@@ -41,6 +41,7 @@ requests from users, including:
   Lucia Hindorff
   Jeffery Hughes
   Beat Hulliger
+  Steven Johnston
   David Eduardo Jorquera Petersen
   Lauren Kennedy
   Ward Kinkade
