@@ -51,6 +51,8 @@
 	svybys() to make multiple tables by separate variables rather than a joint table
 	(for Hannah Evans)
 
+	added predictat= option to svypredmeans for Steven Johnston.
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
